generated/checker-for-evaluation/generated/test-Integer-Overflow-df94cb2e57b2cc539f325003e7abb76d3060d55b/build_logs/7/build_error_log2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SectorVarVisitor::VisitVarDecl(clang::VarDecl*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:60:23: error: cannot convert ‘clang::ento::BasicBugReport*’ to ‘std::unique_ptr<clang::ento::BugReport>’
   60 |         BR.emitReport(Report);
      |                       ^~~~~~
      |                       |
      |                       clang::ento::BasicBugReport*
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:8:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:631:54: note:   initializing argument 1 of ‘virtual void clang::ento::BugReporter::emitReport(std::unique_ptr<clang::ento::BugReport>)’
  631 |   virtual void emitReport(std::unique_ptr<BugReport> R);
      |                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SectorVarVisitor::VisitParmVarDecl(clang::ParmVarDecl*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:88:23: error: cannot convert ‘clang::ento::BasicBugReport*’ to ‘std::unique_ptr<clang::ento::BugReport>’
   88 |         BR.emitReport(Report);
      |                       ^~~~~~
      |                       |
      |                       clang::ento::BasicBugReport*
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:8:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:631:54: note:   initializing argument 1 of ‘virtual void clang::ento::BugReporter::emitReport(std::unique_ptr<clang::ento::BugReport>)’
  631 |   virtual void emitReport(std::unique_ptr<BugReport> R);
      |                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~^
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
